[package]
name = "pwnio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.58"
bytes = "1.3.0"
hex = "0.4.3"
md5 = "0.7.0"
# openssl = "0.10.45"
# openssl-sys = "0.9.80"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.91"
tokio = { version = "1.22.0", features = ["full"] }
